SigmaCodebackup3rdSep/objects/Inventory_Consumption__c.object
<CustomObject>
    <fields>
        <fullName>Consumed_Quantity__c</fullName>
        <label>Consumed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Inventory_Location_Product_Line_Item__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Inventory Consumptions</relationshipLabel>
        <relationshipName>Inventory_Consumptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Consumptions</relationshipLabel>
        <relationshipName>Inventory_Consumptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Inventory Consumptions</relationshipLabel>
        <relationshipName>Inventory_Consumptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserve_Quantity__c</fullName>
        <label>Reserve Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billing_amount_of_Reserved_Product__c</fullName>
        <formula>Consumed_Quantity__c  *   unit_price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billing amount of Consumed Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unit_price__c</fullName>
        <formula>VALUE( TEXT(Inventory_Location_Product_Line_Item__r.Unit_Price__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>unit price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Consumption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{0000}</displayFormat>
        <label>IC-Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OnReservedAndConsumedQty</fullName>
        <active>true</active>
        <errorConditionFormula>Consumed_Quantity__c   &gt;   Reserve_Quantity__c</errorConditionFormula>
        <errorDisplayField>Consumed_Quantity__c</errorDisplayField>
        <errorMessage>Consumed Quantity should be less than Reserved Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>afterexpenditurefield</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK($ObjectType.Expenditure__c.Fields.Id)</errorConditionFormula>
        <errorMessage>Apply Expenditure to project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>reservedqtyvalidation</fullName>
        <active>true</active>
        <description>for reserved and avilable gty</description>
        <errorConditionFormula>Reserve_Quantity__c    &gt;   (Inventory_Location_Product_Line_Item__r.Available_Quantity__c+Inventory_Location_Product_Line_Item__r.Reserved_Quantity__c)</errorConditionFormula>
        <errorDisplayField>Reserve_Quantity__c</errorDisplayField>
        <errorMessage>Reserved qty should be greater than avaliable qty</errorMessage>
    </validationRules>
</CustomObject>